--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "",
-    "server": "",
-    "build": "",
-    "install": "",
-    "client": ""
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "client": "cd client && npm run start",
+    "server": "cd server && npm run server",
+    "build": "cd client && npm run build",
+    "install": "npm install"
   },
   "keywords": [],
   "author": "",
