--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "JATE",
+  "name": "text-editor",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
+    "build": "cd client && npm run build",
     "client": "cd client && npm run start",
     "server": "cd server && npm run server",
-    "build": "cd client && npm run build",
-    "install": "npm install"
+    "postinstall": "(cd client && npm install); (cd server && npm install)",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
-  },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "eslint": "^8.20.0"
   }
 }
