--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,24 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "webpack --watch"
+    "start": "webpack serve"
   },
-  "author": "2U",
-  "license": "UNLICENSED",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@babel/core": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-env": "^7.18.9",
     "@babel/runtime": "^7.15.3",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.3.2",
-    "http-server": "^0.11.1",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
     "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^6.2.4"
   },
