--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start": "npm run build && cd server && node server.js",
+    "start": "concurrently \"npm run build\" \"cd server && node server.js\"",
     "build": "cd client && npm run build",
     "client": "cd client && npm run start",
     "server": "cd server && npm run server",
