added node version to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "text-editor",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
