--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "cd client && npm run build",
     "client": "cd client && npm run start",
     "server": "cd server && npm run server",
-    "postinstall": "(cd client && npm install); (cd server && npm install)"
+    "postinstall": "(cd client && npm install && npm install --dev); (cd server && npm install)"
   },
   "keywords": [],
   "author": "",
